--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <label for="pointsPossible">Points Possible: </label>
     <input type="text" name="pointsPossible" id="pointsPossible"><br><br>
 
-    <button id="showGrade">Show Grade</button>
+    <button id="sortByName" value="names" class="buttons">Sort By Names</button>
+    <button id="sortByPercentage" value="percentages" class="buttons">Sort By Percentage</button>
 
     <h2><span id="output"></span></h2>
 </form>
